fixed icon spacing on mobile

--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@ a.button:hover{
 #email-box {
     position: absolute;
     margin-left: 220px;
-    top: 80px;
+    top: 100px;
     background-color: #000;
     padding: 10px;
     border-radius: 10px;
@@ -358,12 +358,18 @@ a.button:hover{
       }
 
     .nav-links img {
-        height: 30px;
-        width: 30px;
+        height: 27px;
+        width: 27px;
       }
 
     .nav-links li {
         margin: 5px 0;
+      }
+
+    .nav-links a {
+        display: flex;
+        align-items: center;
+        padding: 3px;
       }
 
     #cor {
